# qrlib

./: .gitignore  README.rst  pyproject.toml  scratchpad.ipynb  setup.py
qrlib/: __init__.py  config.py  exceptions.py  qrlib.py  qrsvg.py  validation.py
qrlib/lib/: pyqrcode.py
qrlib/tests/: test_qr_generation.py
