[tool.poetry]
name = "qrlib"
version = "2.0.0-alpha.1"
description = "SVG based QR Image and PDF generation library"
authors = ["Miguel Paolino <mpaolino@ideal.com.uy>"]
maintainers = ["Justin Palmer <jaypalm1@gmail.com>"]
license = "proprietary"
readme = "README.rst"
packages = [{ include = 'qrlib' }]
repository = "https://github.com/mpaolino/qrlib"
keywords = ["qr", "library", "qrlib"]
homepage = "https://github.com/mpaolino/qrlib"
classifiers = ["Development Status :: 1 - Stable", "Topic :: Utilities"]


[tool.poetry.dependencies]
python = "^3.10"
Pillow = "^9.1.0"
CairoSVG = "^2.5.2"
reportlab = "^3.6.9"

[tool.poetry.dev-dependencies]
notebook = "^6.4.11"
black = "^22.3.0"
pyzbar = "^0.1.9"
unittest2 = "^1.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
